--- a/templates/home.html
+++ b/templates/home.html
@@ -93,7 +93,7 @@
                                  <a class="nav-link" href="client.html">Clientes</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="contact.html"> Contactanos </a>
+                                 <a class="nav-link" href="{% url 'contacto' %}"> Contactanos </a>
                               </li>
                            </ul>
                         </div>
@@ -707,7 +707,7 @@
                      <li> <a href="{% url 'servicios' %}"> </i>Servicios</a></li>
                      <li> <a href="team.html"></i>Equipo</a></li>
                      <li> <a href="client.html"></i>Clientes</a></li>
-                     <li> <a href="contact.html"></i>Contactanos</a></li>
+                     <li> <a href="{% url 'contacto' %}">Contactanos</a></li>
                   </ul>
                </div>
                <div class="col-lg-2 col-md-6 col-sm-6">
