--- a/apps/consumidor/templates/consumidor_datos_personales.html
+++ b/apps/consumidor/templates/consumidor_datos_personales.html
@@ -17,6 +17,7 @@
                     <th scope="col" class="text-center">Nombres</th>
                     <th scope="col" class="text-center">Apellidos</th>
                     <th scope="col" class="text-center">Email</th>
+                    <th scope="col" class="text-center">Teléfono</th>
                   </tr>
                 </thead>
                 <tbody class="table-group-divider">
@@ -30,6 +31,7 @@
                     <td class="text-center fw-medium">{{ usuario.nombre }}</td>
                     <td class="text-center fw-medium">{{ usuario.apellido }}</td>
                     <td class="text-center fw-medium">{{ usuario.email }}</td>
+                    <td class="text-center fw-medium">{{ usuario.telefono }}</td>
                      {% comment %} <td>
                       <a href="javascript:void(0)" class="link-primary text-dark fw-medium d-block">/index.html</a>
                     </td> {% endcomment %}
