--- a/apps/prestador/templates/index_prestador.html
+++ b/apps/prestador/templates/index_prestador.html
@@ -47,7 +47,15 @@
               </a>
             </li>
             <li class="sidebar-item">
-              <a class="sidebar-link" href="{% url 'contratos' %}"aria-expanded="false">
+              <a class="sidebar-link" href="{% url 'solicitudes_prestador' %}" aria-expanded="false">
+                <span>
+                  <iconify-icon icon="mdi:briefcase-outline" class="fs-6"></iconify-icon>
+                </span>
+                <span class="hide-menu fs-3">Solicitudes</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="{% url 'contratos_prestador' %}"aria-expanded="false">
                 <span>
                   <iconify-icon icon="solar:layers-minimalistic-bold-duotone" class="fs-6"></iconify-icon>
                 </span>
