--- a/apps/prestador/templates/prestador_datos_personales.html
+++ b/apps/prestador/templates/prestador_datos_personales.html
@@ -15,6 +15,7 @@
                     <th scope="col" class="text-center">Ver mas</th>
                     <th scope="col" class="ps-4">Nombres</th>
                     <th scope="col" class="text-center">Apellido</th>
+                    <th scope="col" class="text-center">Teléfono</th>
                     <th scope="col" class="text-center">Email</th>
                     <th scope="col" class="text-center">CUIL/CUIT</th>
                     <th scope="col" class="text-center">Estudios</th>
