--- a/apps/prestador/templates/prestador_panel.html
+++ b/apps/prestador/templates/prestador_panel.html
@@ -22,8 +22,9 @@
                   <tr class="border-2 border-bottom border-primary border-0"> 
                     <th scope="col" class="text-center">Ver mas</th>
                     <th scope="col" class="text-center">Nombres</th>
-                    <th scope="col" class="text-center">Apellidos</th>
+                    <th scope="col" class="text-center">Apellidos</th>                    
                     <th scope="col" class="text-center">Email</th>
+                    <th scope="col" class="text-center">Teléfono</th>
                   </tr>
                 </thead>
                 <tbody class="table-group-divider">
@@ -36,6 +37,8 @@
                     <td class="text-center fw-medium">{{ usuario.nombre }}</td>
                     <td class="text-center fw-medium">{{ usuario.apellido }}</td>
                     <td class="text-center fw-medium">{{ usuario.email }}</td>
+                    <td class="text-center fw-medium">{{ usuario.telefono }}</td>
+
                      {% comment %} <td>
                       <a href="javascript:void(0)" class="link-primary text-dark fw-medium d-block">/index.html</a>
                     </td> {% endcomment %}
