--- a/templates/lista_de_servicios.html
+++ b/templates/lista_de_servicios.html
@@ -16,19 +16,21 @@
     <div class="container mt-5">
       <h1 class="text-center">Listado de Servicios</h1>
       <div class="mb-3">
-        <!-- si el usuario es logeado vuelve al panel de usuario-->
-        {% if user.is_authenticated %} 
-          <a href="{% url 'consumidor' %}" class="btn btn-secondary">
-            <iconify-icon icon="material-symbols:arrow-back-rounded" class="fs-6"></iconify-icon>
-            Volver 
-          </a>
-        <!--si no esta logueado vuelve al home -->
+        <!-- si el usuario es logeado vuelve al panel de usuario, sino vuelve al home-->
+        {% if user.is_authenticated %}
+          {% if rol == 1 %}
+            <a href="{% url 'consumidor' %}" class="btn btn-secondary">
+          {% elif rol == 2 %}
+            <a href="{% url 'prestador' %}" class="btn btn-secondary">
+          {% else %}
+            <a href="{% url 'home' %}" class="btn btn-secondary">
+          {% endif %}
         {% else %}
           <a href="{% url 'home' %}" class="btn btn-secondary">
-           <iconify-icon icon="material-symbols:arrow-back-rounded" class="fs-6"></iconify-icon>
-            Volver
-          </a>
         {% endif %}
+            <iconify-icon icon="material-symbols:arrow-back-rounded" class="fs-6"></iconify-icon>
+            Volver 
+        </a>
       </div>
 
       <!-- Formulario de filtros -->
@@ -77,6 +79,10 @@
                     Localidad: {{ servicio.localidad }}
                   </small>
                 </p>
+                <!--boton para solicitar servicio-->
+                <a href="{% url 'solicitar_servicio' servicio.id %}" class="btn btn-success btn-sm mt-2 w-100">
+                  Solicitar servicio
+                </a>
               </div>
             </div>
           </div>
